--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,10 @@ zune-jpeg = { version = "0.5.12", default-features = false }
 embedded-tls = { version = "0.18.0", default-features = false, features = [
   "defmt",
 ] }
+serde = { version = "1.0.228", default-features = false }
+serde_json = { version = "1.0.149", default-features = false, features = [
+  "alloc",
+] }
 
 
 [build-dependencies]
