Get it to pull a photo from Synology shred album with creds locally

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 WIFI_SSID="PRETTY FLY FOR A WIFI"
 WIFI_PASSWORD="1234"
+
+
+SYN_BASE="https//192-168-1-1.QUICK_CONNECT_ID.direct.quickconnect.to:5001"
+SYN_USER="frame"
+SYN_PASS="secret"
+SYN_ALBUM="id from share"
